--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
                 <p class="mt-20">Hi, I am a fresh graduate in Informatics Engineering from Universitas Trunojoyo Madura with a GPA of 3.62. With a background in information technology and five years of experience as the Chief Treasurer at Pondok Pesantren Alhidayah, I am well-versed in managing institutional finances manually and accurately, including cash recording, budget planning, and financial reporting. My skills include proficiency in Microsoft Office, data analysis, and effective communication — all of which support my ability to work in accounting-related roles. I am ready to contribute in the financial sector, particularly in digital accounting and technology-based financial systems (fintech).</p>
 		
 		<p class="mt-20">In addition, I also took Data Analysis courses and was often involved in various data analysis projects. This experience helped me deepen my understanding of data processing and its applications.</p>
-                <button class="btn btn-outline-danger" onclick="window.open('CV_Ahlaqul Karimah M.pdf','_blank')"><i class="icon-down-circled2"></i>Download My CV</button>
+                <button class="btn btn-outline-danger" onclick="window.open('CV Accounting_Ahlaqul Karimah.pdf','_blank')"><i class="icon-down-circled2"></i>Download My CV</button>
             </div>
             <div class="col-lg-4 about-card">
                 <h3 class="font-weight-light">Personal Info</h3>
